--- a/src/index.css
+++ b/src/index.css
@@ -3,18 +3,34 @@
   padding: 0px;
   box-sizing: border-box;
 }
-button{
-  background-color: transparent;
-  border:none;
-  margin: 5px;
-  text-align: start;
+.accordion {
   width: 100%;
-  font-weight: bold;
-  font-size: medium;
+  margin: 20px auto;
+  font-family: Arial, sans-serif;
 }
-.faq-item{
-  background-color:bisque;
-  margin: 30px;
-  padding: 15px;
-  border-radius: 8px;
+
+.faq-item {
+  border-bottom: 1px solid #ccc;
+  padding: 10px;
+}
+
+.faq-question {
+  cursor: pointer;
+  padding: 10px;
+  background: #80D0C7;
+  border-radius: 5px;
+  transition:background 0.3s ease;
+}
+
+.faq-question:hover {
+  background: #e2e6ea;
+}
+body{
+  background-color: #0093E9;
+  background-image: linear-gradient(90deg, #0093E9 0%, #80D0C7 100%);
+}
+.faq-answer {
+  padding: 10px;
+  color: #333;
+  margin-top: 5px;
 }
